test/corpus/selectors.txt
==================
Simple property selector
==================

.property

---

(source_file
  (selector_expr
    property: (identifier)))

==================
Chained property selector
==================

.h.level

---

(source_file
  (selector_expr
    base: (selector_expr
      property: (identifier))
    property: (identifier)))

==================
Array iterator selector
==================

.[]

---

(source_file
  (selector_expr))

==================
Double array iterator selector
==================

.[][]

---

(source_file
  (selector_expr
    base: (selector_expr)))

==================
Chained selector with base
==================

x.h.level

---

(source_file
  (selector_expr
    base: (selector_expr
      base: (identifier)
      property: (identifier))
    property: (identifier)))

==================
Array index selector
==================

x[0]

---

(source_file
  (selector_expr
    base: (identifier)
    index: (number)))

==================
Selector call with one arg
==================

.list(1)

---

(source_file
  (selector_call_expr
    selector: (selector_expr
      property: (identifier))
    arguments: (argument_list
      (number))))

==================
Selector call with multiple args
==================

.table(1,2)

---

(source_file
  (selector_call_expr
    selector: (selector_expr
      property: (identifier))
    arguments: (argument_list
      (number)
      (number))))

==================
Selector call with range arg
==================

.h(1..2)

---

(source_file
  (selector_call_expr
    selector: (selector_expr
      property: (identifier))
    arguments: (argument_list
      (binary_expr
        (number)
        (number)))))

==================
Selector call with string arg
==================

.code("rust")

---

(source_file
  (selector_call_expr
    selector: (selector_expr
      property: (identifier))
    arguments: (argument_list
      (string))))
